--- a/backend/package.json
+++ b/backend/package.json
@@ -18,23 +18,26 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:migrate": "drizzle-kit migrate",
-    "db:generate": "drizzle-kit generate",
+    "db:migrate": "ts-node src/database/migrate.ts",
+    "db:generate": "drizzle-kit generate:pg",
     "db:seed": "ts-node src/database/seed.ts",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:test": "ts-node src/database/test-connection.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
     "@nestjs/swagger": "^7.1.17",
+    "@types/pg": "^8.15.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "drizzle-orm": "^0.29.1",
+    "pg": "^8.16.3",
     "postgres": "^3.4.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
