--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,11 +2,29 @@
 PORT=3001
 NODE_ENV=development
 
+# API Configuration
+API_PREFIX=api
+API_VERSION=v1
+
 # Database Configuration
 DATABASE_URL=postgresql://postgres:password@localhost:5432/lyrics_assistant
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=password
+DB_NAME=lyrics_assistant
 
 # Frontend Configuration
 FRONTEND_URL=http://localhost:3000
 
+# Security Configuration
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
 # External APIs
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
+PERPLEXITY_BASE_URL=https://api.perplexity.ai
+
+# Logging Configuration
+LOG_LEVEL=info
