Added Swagger and show only implemented endpoints

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,3 +28,7 @@ PERPLEXITY_BASE_URL=https://api.perplexity.ai
 
 # Logging Configuration
 LOG_LEVEL=info
+
+# API Documentation Configuration
+SWAGGER_ENABLED=true
+SWAGGER_PATH=api/docs
