--- a/backend/package.json
+++ b/backend/package.json
@@ -31,9 +31,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@types/pg": "^8.15.5",
+    "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "drizzle-orm": "^0.29.1",
+    "openai": "^5.20.2",
     "pg": "^8.16.3",
     "postgres": "^3.4.3",
     "reflect-metadata": "^0.1.13",
@@ -44,6 +46,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/axios": "^0.9.36",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
